[metadata]
name = pydecharge
version = 1.0.0
author = Brendan Chabannes
author_email = brendan.chabannes@hey.com
description = Synthèse des lignes de décharges
license = 'LICENSE'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Brndan/pydecharge
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = openpyxl

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pydecharge = pydecharge.__main__:main
